@@ -1,0 +1,22 @@
+#!/bin/sh
+### BEGIN INIT INFO
+# Provides:          neutron-lbaasv2-agent
+# Required-Start:    $network $local_fs $remote_fs $syslog
+# Required-Stop:     $remote_fs
+# Should-Start:      mysql postgresql rabbitmq-server keystone
+# Should-Stop:       mysql postgresql rabbitmq-server keystone
+# Default-Start:     2 3 4 5
+# Default-Stop:      0 1 6
+# Short-Description: Neutron LBaaS v2 agent
+# Description:       Provide LBaaS v2 agent for neutron
+### END INIT INFO
+
+# Authors: Corey Bryant <corey.bryant@canonical.com>,
+#          Thomas Goirand <zigo@debian.org>
+# PATH should only include /usr/* if it runs after the mountnfs.sh script
+DESC="OpenStack Neutron LBaaSv2 agent"
+PROJECT_NAME=neutron
+NAME=${PROJECT_NAME}-lbaasv2-agent
+# --config-file=/etc/neutron/neutron.conf will be happened 
+# to DAEMON_ARGS later by openstack-pkg-tools
+DAEMON_ARGS="--config-file=/etc/neutron/lbaas_agent.ini"
