@@ -1,1 +1,2 @@
 /usr/lib/python*
+usr/bin/*
