@@ -7,6 +7,12 @@ neutron-lbaas (1:9.0.0~b1-1) experimental; urgency=medium
   [ Thomas Goirand ]
   * New upstream release.
   * Fixed (build-)depends for this release.
+  * Align the package with the one from Ubuntu, so that it is compatible with
+    upstream puppet-openstack.
+  * Fixed debian/copyright (missing holders).
+  * Moved /usr/bin/* to python-lbaas-agent, so that we can later on provide a
+    Python 3 implementation. Now using lbaas-agent-common for config files only
+    and 2 packages for the daemons.
 
  -- Thomas Goirand <zigo@debian.org>  Sat, 18 Jun 2016 15:45:22 +0200
 
